# ISP1

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO_LIST.txt  build.bat  build.sh  buildAndRun.bat  buildAndRun.sh  format.sh
data/windows_installation/: windows_installation.docx
include/: a_star.hpp  astar.hpp  column.hpp  contains.hpp  cost.hpp  edges_of.hpp  expand.hpp  generate_new_paths.hpp  graph_t.hpp  grid.hpp  grid_world.hpp  h1.hpp  h2.hpp  identifier_with_cost.hpp  insert.hpp  manhattan_distance.hpp  namespaces.hpp  node.hpp  non_monotonic.hpp  path.hpp  position.hpp  position_kind.hpp  romania.hpp  romanian_city.hpp  row.hpp  run_graph_example.hpp  search_tree.hpp  total_order.hpp  undirected_graph.hpp
src/: astar.cpp  c1.cpp  c2.cpp  column.cpp  grid.cpp  grid_world.cpp  main.cpp  manhattan_distance.cpp  non_monotonic.cpp  position.cpp  position_kind.cpp  romania.cpp  romanian_city.cpp  row.cpp
